--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
               <p class="ui-text-intro">Lorem ipsum dolor sit amet, consectetur lit, enimad eiusmod tempor incididunt ut labore et dolore magna aliqua ullamco laboris nisi.</p>
               <!-- CTA -->
               <div class="ui-component-cta ui-layout-flex">
-                <a href="#" role="link" aria-label="#" class="ui-component-button ui-component-button-normal ui-component-button-primary">Get notified on WhatsApp</a>
-                <p class="ui-text-note"><small>30 days free trial.</small></p>
+                <a href="#" role="link" aria-label="#" class="ui-component-button ui-component-button-normal ui-component-button-primary">Join WhatsApp</a>
+                <p class="ui-text-note"><small>get notified for the events</small></p>
               </div>
             </div>
             <!-- IMAGE -->
