--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               </div>
             </div>
             <!-- IMAGE -->
-            <img src="https://res.cloudinary.com/uisual/image/upload/assets/devices/ipad.png" loading="lazy" alt="#" class="ui-image-half-right">
+            <img src="coding.svg" loading="lazy" alt="#" class="ui-image-half-right">
           </div>
         </div>
       </section>
