--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
               <div class="ui-component-card--feature-content">
                 <h4 class="ui-component-card--feature-title">Career in Development</h4>
                 <p>with Mehul Mohan (Founder & CEO @ Codedamn)</p>
+                <p class="ui-text-note">Dec 14th, 8:30 PM</p>
+                <a href="#" role="link" class="ui-component-button ui-component-button-big ui-component-button-secondary">Add to Calendar</a>
               </div>
             </div>
 
@@ -93,6 +95,8 @@
               <div class="ui-component-card--feature-content">
                 <h4 class="ui-component-card--feature-title">Coding Meetup!</h4>
                 <p>Meet ambitious developers who are killing it!</p>
+                <p class="ui-text-note">Dec 16th, 8:30 PM</p>
+                <a href="#" role="link" class="ui-component-button ui-component-button-big ui-component-button-secondary">Join Discord</a>
               </div>
             </div>
 
@@ -101,6 +105,8 @@
               <div class="ui-component-card--feature-content">
                 <h4 class="ui-component-card--feature-title">Development Workshop</h4>
                 <p>Beginner's guide to building and hosting a website.</p>
+                <p class="ui-text-note">Dec 17th, 7:00 PM</p>
+                <a href="#" role="link" class="ui-component-button ui-component-button-big ui-component-button-secondary">Add to Calendar</a>
               </div>
             </div>
 
@@ -109,6 +115,8 @@
               <div class="ui-component-card--feature-content">
                 <h4 class="ui-component-card--feature-title">BlueLearn Hackathon</h4>
                 <p>Build real-world projects and get rewarded!</p>
+                <p class="ui-text-note">Dec 18th - Dec 19th</p>
+                <a href="#" role="link" class="ui-component-button ui-component-button-big ui-component-button-secondary">Register Now</a>
               </div>
             </div>
 
@@ -117,6 +125,17 @@
               <div class="ui-component-card--feature-content">
                 <h4 class="ui-component-card--feature-title">BlueLearn Hackathon Final Pitch</h4>
                 <p>Meet the hackathon killers!</p>
+                <p class="ui-text-note">Dec 19th, 8:30 PM</p>
+                <a href="#" role="link" class="ui-component-button ui-component-button-big ui-component-button-secondary">Add to Calendar</a>
+              </div>
+            </div>
+
+            <div class="ui-component-card ui-component-card--feature">
+              <img src="community.svg" alt="#" loading="lazy">
+              <div class="ui-component-card--feature-content">
+                <h4 class="ui-component-card--feature-title">Supportive Community</h4>
+                <p>Meet India's Largest Community</p>
+                <a href="#" role="link" class="ui-component-button ui-component-button-big ui-component-button-secondary">Join Discord</a>
               </div>
             </div>
 
