--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <!-- COPYWRITING -->
             <div>
               <h1>Coding Week</h1>
-              <p class="ui-text-intro">Want to start coding? or Want to build amazing projects? or Want to know What is the power of coding? Join our events and know everything!</p>
+              <p class="ui-text-intro">Want to start coding? or Want to build amazing projects? or Want to know what is the power of coding? Join our events and know everything!</p>
               <!-- CTA -->
               <div class="ui-component-cta ui-layout-flex">
                 <a href="#" role="link" aria-label="#" class="ui-component-button ui-component-button-normal ui-component-button-primary">Join WhatsApp</a>
@@ -62,6 +62,21 @@
         </div>
       </section>
 
+      <section class="ui-section-close">
+        <div class="ui-layout-container">
+          <div class="ui-section-close__layout ui-layout-flex">
+            <div>
+              <h2>BlueLearn's Hackathon</h2>
+              <p class="ui-text-intro">participate to innovate solutions to local and global<br>issues by building real-world projects.</p>
+            </div>
+            <!-- CTA -->
+            <div class="ui-component-cta ui-layout-flex">
+              <a href="#" role="link" aria-label="#" class="ui-component-button ui-component-button-normal ui-component-button-primary">Register Now</a>
+              <p class="ui-text-note"><small>Click here to fill the form</small></p>
+            </div>
+          </div>
+        </div>
+      </section>
       <section class="ui-section-feature">
         <div class="ui-layout-container">
           <div class="ui-section-feature__layout ui-layout-grid ui-layout-grid-3">
@@ -126,21 +141,6 @@
         </div>
       </section>
       
-      <section class="ui-section-close">
-        <div class="ui-layout-container">
-          <div class="ui-section-close__layout ui-layout-flex">
-            <div>
-              <h2>Participate Hackathon</h2>
-              <p class="ui-text-intro">innovate solutions to local and global issues<br>by building real-world projects.</p>
-            </div>
-            <!-- CTA -->
-            <div class="ui-component-cta ui-layout-flex">
-              <a href="#" role="link" aria-label="#" class="ui-component-button ui-component-button-normal ui-component-button-primary">Register Now</a>
-              <p class="ui-text-note"><small>Click here to fill the form</small></p>
-            </div>
-          </div>
-        </div>
-      </section>
     </main>
     <footer role="contentinfo" class="ui-section-footer">
       <div class="ui-layout-container">
