--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <!-- COPYWRITING -->
             <div>
               <h1>Coding Week</h1>
-              <p class="ui-text-intro">Learn and hang out with super motivated peers with same passion as yours. Join the week filled with coding events, projects and meetups.</p>
+              <p class="ui-text-intro">Want to learn how to code & build amazing projects? Join us in a week full of events & opportunities to learn, network, grow & win exciting prizes!</p>
               <!-- CTA -->
               <div class="ui-component-cta ui-layout-flex">
                 <a href="#" role="link" aria-label="#" class="ui-component-button ui-component-button-normal ui-component-button-primary">Join WhatsApp</a>
