--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               <h1>Coding Week</h1>
               <p class="ui-text-intro">Want to learn how to code & build amazing projects? Join us in a week full of events & opportunities to learn, network, grow & win exciting prizes!</p>
               <div class="ui-component-cta ui-layout-flex">
-                <a href="https://bluelearn.in/whatsapp" role="link" class="ui-component-button ui-component-button-normal ui-component-button-primary">Join WhatsApp</a>
+                <a href="https://bluelearn.in/whatsapp"  target="_blank" role="link" class="ui-component-button ui-component-button-normal ui-component-button-primary">Join WhatsApp</a>
                 <p class="ui-text-note"><small>get notified for the events</small></p>
               </div>
             </div>
@@ -46,21 +46,22 @@
       </section>
 
       <section class="ui-section-close">
+        <img src="bulb.png" class="abso-img img-abso-1" alt="">
+        <img src="bulb1.png" class="abso-img img-abso-2" alt="">
         <div class="ui-layout-container">
-          <div class="ui-section-close__layout ui-layout-flex">
+          <div class="ui-section-close__layout ui-layout-flex" style="flex-direction: column;">
             <div>
-              <h2>BlueLearn's Hackathon</h2>
-              <p class="ui-text-intro">Collaborate with fellow coders and work towards<br>turning great ideas in your head into reality!</p>
-            </div>
-            <div class="ui-component-cta ui-layout-flex">
-              <a href="https://forms.gle/taNgQXCdFfpyGhFk9" role="link" aria-label="#" class="ui-component-button ui-component-button-normal ui-component-button-primary">Register Now</a>
-              <p class="ui-text-note"><small>Click here to fill the form</small></p>
+              <p class="ui-text-note" style="text-align: center;"><small>Introducing</small></p>
+              <h2 style="text-align: center;">BlueLearn's Hackathon</h2>
+              <p class="ui-text-note" style="text-align: center;">Dec 18 - Dec 19</p>
+              <p style="text-align: center;">Collaborate with fellow coders and work towards<br>turning great ideas in your head into reality!</p>
             </div>
           </div>
         </div>
       </section>
       <section class="ui-section-feature">
         <div class="ui-layout-container">
+          <h2 style="text-align: center; margin-bottom: 4rem;">Other Events</h2>
           <div class="ui-section-feature__layout ui-layout-grid ui-layout-grid-3">
             <div class="ui-component-card ui-component-card--feature">
               <img src="https://bluelearnprod.s3.ap-south-1.amazonaws.com/EVENT_IMAGE/136/2021-12-11T16%3A20%3A24%2B00%3A00-Career%20in%20Development%20Thumbnail.png" alt="#" loading="lazy">
@@ -114,6 +115,22 @@
               </div>
             </div>
 
+          
+          </div>
+        </div>
+      </section>
+
+      <section class="ui-section-close2">
+        <div class="ui-layout-container">
+          <div class="ui-section-close__layout ui-layout-flex">
+            <div>
+              <h2>Want to get notified?</h2>
+              <p class="ui-text-intro"></p>
+            </div>
+            <div class="ui-component-cta ui-layout-flex">
+              <a href="https://bluelearn.in/whatsapp" target="_blank" role="link" aria-label="#" class="ui-component-button ui-component-button-normal ui-component-button-primary">Join WhatsApp</a>
+              <p class="ui-text-note"><small>get notified for the events</small></p>
+            </div>
           </div>
         </div>
       </section>
