--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="dns-prefetch" href="https://fonts.gstatic.com">
     <link rel="me" href="#">
+    <link rel="shortcut icon" href="https://bluelearnprod.s3.ap-south-1.amazonaws.com/OTHER/bluelearn_favicon.png" type="image/x-icon">    
     <link rel="canonical" href="#">
     <link rel="icon" type="image/png" href="#" sizes="48x48">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap">
