--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <h1>Coding Week</h1>
               <p class="ui-text-intro">Want to learn how to code & build amazing projects? Join us in a week full of events & opportunities to learn, network, grow & win exciting prizes!</p>
               <div class="ui-component-cta ui-layout-flex">
-                <a href="https://bluelearn.in/whatsapp"  target="_blank" role="link" class="ui-component-button ui-component-button-normal ui-component-button-primary">Join WhatsApp</a>
+                <a href="https://bit.ly/3DHlXuJ"  target="_blank" role="link" class="ui-component-button ui-component-button-normal ui-component-button-primary">Join WhatsApp</a>
                 <p class="ui-text-note"><small>get notified for the events</small></p>
               </div>
             </div>
@@ -129,7 +129,7 @@
               <p class="ui-text-intro"></p>
             </div>
             <div class="ui-component-cta ui-layout-flex">
-              <a href="https://bluelearn.in/whatsapp" target="_blank" role="link" aria-label="#" class="ui-component-button ui-component-button-normal ui-component-button-primary">Join WhatsApp</a>
+              <a href="https://bit.ly/3DHlXuJ" target="_blank" role="link" aria-label="#" class="ui-component-button ui-component-button-normal ui-component-button-primary">Join WhatsApp</a>
               <p class="ui-text-note"><small>get notified for the events</small></p>
             </div>
           </div>
