--- a/index.html
+++ b/index.html
@@ -150,5 +150,14 @@
         </div>
       </div>
     </footer>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-EW4LJCTZLJ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-EW4LJCTZLJ');
+    </script>
   </body>
 </html>
