--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         <div class="ui-layout-container">
           <div class="ui-section-close__layout ui-layout-flex" style="flex-direction: column;">
             <div>
-              <p class="ui-text-note" style="text-align: center;"><small>Introducing</small></p>
-              <h2 style="text-align: center;">BlueLearn's Hackathon</h2>
-              <p class="ui-text-note" style="text-align: center;">Dec 18 - Dec 19</p>
+              <small class="ui-text-note" style="text-align: center; display: block;">Introducing</small>
+              <h2 style="text-align: center;"><span class="blue">BlueLearn's</span> Hackathon</h2>
+              <p class="ui-text-note" style="text-align: center; text-decoration: underline;">Dec 18 - Dec 19</p>
               <p style="text-align: center;">Collaborate with fellow coders and work towards<br>turning great ideas in your head into reality!</p>
             </div>
           </div>
@@ -62,7 +62,7 @@
       </section>
       <section class="ui-section-feature">
         <div class="ui-layout-container">
-          <h2 style="text-align: center; margin-bottom: 4rem;">Other Events</h2>
+          <h2 style="text-align: center; margin-bottom: 4rem;"><span class="blue">Explore</span> Events</h2>
           <div class="ui-section-feature__layout ui-layout-grid ui-layout-grid-3">
             <div class="ui-component-card ui-component-card--feature">
               <img src="https://bluelearnprod.s3.ap-south-1.amazonaws.com/EVENT_IMAGE/136/2021-12-11T16%3A20%3A24%2B00%3A00-Career%20in%20Development%20Thumbnail.png" alt="#" loading="lazy">
