--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="ui-section-close__layout ui-layout-flex" style="flex-direction: column;">
             <div>
               <small class="ui-text-note" style="text-align: center; display: block;">Introducing</small>
-              <h2 style="text-align: center;"><span class="blue">BlueLearn's</span> Hackathon</h2>
+              <h2 style="text-align: center;"><span class="blue">BlueLearn</span> Hackathon</h2>
               <p class="ui-text-note" style="text-align: center; text-decoration: underline;">Dec 18 - Dec 19</p>
               <p style="text-align: center;">Collaborate with fellow coders and work towards<br>turning great ideas in your head into reality!</p>
             </div>
